updated .md files, updated build scripts